fix: :sparkles: Added animation

--- a/Ising Model/Ising.ipynb
+++ b/Ising Model/Ising.ipynb
@@ -12,7 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install mayavi\n",
+    "# %pip install pyqt5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +31,18 @@
     "import matplotlib.pyplot as plt\n",
     "import numba\n",
     "from numba import njit\n",
-    "from mayavi import mlab"
+    "from mayavi import mlab\n",
+    "from tqdm.notebook import tqdm # Barra de progreso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lattice\n",
-    "tamaño_red = 20\n",
+    "tamaño_red = 4\n",
     "\n",
     "# Red tridimensional\n",
     "rejilla = np.random.choice([-1, 1], size=(tamaño_red, tamaño_red, tamaño_red))"
@@ -39,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Algoritmo de Metropolis para la red 3D\n",
-    "@numba.njit(\"UniTuple(f8[:], 2)(i8[:,:,:], i8, f8, f8)\", nogil=True)\n",
+    "@numba.njit(nogil=True)\n",
     "def metropolis(rejilla, pasos, BJ, energia):\n",
     "    # Copiar la rejilla para no modificar la original\n",
     "    rejilla = rejilla.copy()\n",
@@ -89,14 +100,26 @@
     "        magnetizacion[t] = rejilla.sum()\n",
     "        energia_total[t] = energia\n",
     "\n",
-    "    return magnetizacion, energia_total"
+    "    return {'rejilla': rejilla, 'magnetizacion': magnetizacion, 'energia_total': energia_total}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot convert native LiteralStrKey[Dict]({Literal[str](rejilla): array(int64, 3d, C), Literal[str](magnetizacion): array(float64, 1d, C), Literal[str](energia_total): array(float64, 1d, C)}) to Python object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Ejecutar la simulación\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# magnetizacion, energia_total = metropolis(rejilla, 100000, 0.2, 0)\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m magnetizacion, energia_total \u001b[39m=\u001b[39m metropolis(rejilla\u001b[39m.\u001b[39;49mastype(np\u001b[39m.\u001b[39;49mint64), \u001b[39m100000\u001b[39;49m, \u001b[39m0.2\u001b[39;49m, \u001b[39m0\u001b[39;49m)\n\u001b[0;32m      5\u001b[0m \u001b[39m# Graficar la magnetización y la energía total\u001b[39;00m\n\u001b[0;32m      6\u001b[0m fig, ejes \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39msubplots(\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, figsize\u001b[39m=\u001b[39m(\u001b[39m12\u001b[39m, \u001b[39m4\u001b[39m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot convert native LiteralStrKey[Dict]({Literal[str](rejilla): array(int64, 3d, C), Literal[str](magnetizacion): array(float64, 1d, C), Literal[str](energia_total): array(float64, 1d, C)}) to Python object"
+     ]
+    }
+   ],
    "source": [
     "# Ejecutar la simulación\n",
     "# magnetizacion, energia_total = metropolis(rejilla, 100000, 0.2, 0)\n",
@@ -137,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize_spins(lattice):\n",
-    "    mlab.figure(bgcolor=(1, 1, 1))\n",
+    "def visualize_spins(lattice, t, output_dir):\n",
+    "    mlab.figure(bgcolor=(1, 1, 1), size=(400, 308))\n",
     "\n",
     "    for i in range(lattice.shape[0]):\n",
     "        for j in range(lattice.shape[1]):\n",
@@ -147,9 +170,10 @@
     "                color = (0, 0, 1) if spin == 1 else (1, 0, 0)\n",
     "                mlab.quiver3d(i, j, k, 0, 0, spin, color=color, mode='arrow', scale_factor=0.5)\n",
     "\n",
-    "    mlab.show()\n",
+    "    mlab.savefig(f\"{output_dir}/frame_{t:04d}.png\")\n",
+    "    mlab.close()\n",
     "\n",
-    "visualize_spins(rejilla)"
+    "# visualize_spins(rejilla)"
    ]
   },
   {
@@ -158,10 +182,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_and_visualize(rejilla, pasos, BJ, energia, visualization_interval=1000):\n",
-    "    for _ in range(pasos // visualization_interval):\n",
-    "        magnetizacion, energia_total = metropolis(rejilla, visualization_interval, BJ, energia)\n",
-    "        visualize_spins(rejilla)\n",
+    "def simulate_and_visualize(rejilla, pasos, BJ, energia, visualization_interval=1000, output_dir=\".\"):\n",
+    "    rejilla = rejilla.astype(np.int64)  # Convert to 64-bit integers\n",
+    "    num_iterations = pasos // visualization_interval\n",
+    "    with tqdm(total=num_iterations) as pbar:\n",
+    "        for t in range(num_iterations):\n",
+    "            results = metropolis(rejilla, visualization_interval, BJ, energia)\n",
+    "            rejilla = results['rejilla']\n",
+    "            visualize_spins(rejilla, t, output_dir)\n",
+    "            pbar.update()\n",
     "\n",
     "simulate_and_visualize(rejilla, 100000, 0.2, 0, visualization_interval=1000)"
    ]
@@ -183,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
